# gcv_spline

./: Cargo.toml  README.md
examples/: basic.rs
src/: bandet.rs  bansol.rs  basis.rs  gcv_spline.rs  gcvspl.rs  lib.rs  main.rs  prep.rs  search.rs  splc.rs  splder.rs  spline.rs  support.rs  trinv.rs
src/woltring/: bandet.rs  bansol.rs  basis.rs  gcvspl.rs  mod.rs  prep.rs  search.rs  splc.rs  splder.rs  support.rs  trinv.rs
