[package]
name = "gcv_spline"
version = "0.1.0"
authors = ["Spencer T. Williams <stwilliamsmail@gmail.com>"]
edition = "2021"
categories = ["science", "mathematics", "science::robotics"]
description = "A library for fitting and evaluating GCV splines."
license = "MIT OR Apache-2.0"
repository = "https://github.com/SpencerTWilliams/gcv_spline"
readme = "README.md"
keywords = ["splines", "derivation", "interpolation", "dynamics", "biomechanics"]
exclude = ["examples", "examples/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies.num-traits]
version = "0.2.17"
default-features = false
features = ["libm"]